--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,28 @@
-:root {
+html{
+
+}
+body {
+    font-family: 'Raleway', sans-serif;
+    color: #fff;
+}
+
+h4{
+  text-transform: uppercase;
+}
+
+.max_vh{
+  background-color: black;
+  min-height: 100vh;
+}
+
+.card img{
+  max-height: 150px;
+}
+
+.carousel-item img{
+  max-height: 100vh;
+}
+/* :root {
     --black: #000;
     --dark: #373A3C;
     --grey: #777777;
@@ -205,4 +229,4 @@ span {
         margin-top: -16px;
     }
 
-}
+} */
